add icons to menu bar

--- a/views/partials/menu_admin.hbs
+++ b/views/partials/menu_admin.hbs
@@ -7,11 +7,10 @@
               <a class="navbar-brand"></a>
             </div>
             <ul class="nav navbar-nav navbar-right align-items-end" >
-              <li id="menuItems"><a href="/home">Home</a></li>
-              <li id="menuItems"><a href="/event">Event</a></li>
-              <li id="menuItems"><a href="/profile" >Profile</a></li>
-                <li id="menuItems"><a href="/admin" >Admin</a></li>
-              <li id="menuItems"><a href="/logout" >Logout</a></li>
+              <li id="menuItems"><a href="/event"><img src="/src/menu-pointer.png" class="icon" alt="event"></a></li>
+              <li id="menuItems"><a href="/profile" ><img src="/src/menu-profile.png" class="icon" alt="profile"></a></li>
+                <li id="menuItems"><a href="/admin" ><img src="/src/menu-management.png" class="icon" alt="admin"></a></li>
+              <li id="menuItems"><a href="/logout" ><img src="/src/menu-logout.png" class="icon" alt="logout"></a></li>
             </ul>
 
           </div>
