--- a/style/menu.css
+++ b/style/menu.css
@@ -14,8 +14,8 @@ body {
 }
 
 #firstRow {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 #headerDiv {
