--- a/style/Profile.css
+++ b/style/Profile.css
@@ -1,6 +1,8 @@
 #profile-pic {
     width: 8vw;
     height: 10vh;
+    min-width: 100px;
+    min-height: 100px;
 }
 
 .pf {
@@ -147,6 +149,8 @@ th {
     background-position: center;
     height: 5vh;
     width: 4vw;
+    min-width: 50px;
+    min-height: 50px;
     
 }
 #switchbutton {
@@ -155,4 +159,59 @@ th {
     background-position: center;
     height: 5vh;
     width: 4vw;
+    min-width: 50px;
+    min-height: 50px;
 }
+
+
+.overlay {
+    position: fixed;
+    top: 5vh;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -10;
+  }
+  .overlay:target {
+    visibility: visible;
+    opacity: 1;
+    z-index: 10;
+  }
+  
+  .popup {
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 30%;
+    position: relative;
+    transition: all 5s ease-in-out;
+  }
+  
+  .popup h2 {
+    margin-top: 0;
+    color: #333;
+    font-family: Tahoma, Arial, sans-serif;
+  }
+  .popup .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+  }
+  .popup .close:hover {
+    color: #06D85F;
+  }
+  .popup .content {
+    max-height: 30%;
+    overflow: auto;
+    text-align: center;
+  }
