finish redesign profile page

--- a/style/Profile.css
+++ b/style/Profile.css
@@ -215,3 +215,12 @@ th {
     overflow: auto;
     text-align: center;
   }
+
+#worddiv {
+    position: fixed;
+    width: 100vw;
+    left: 0;
+    height: 28vh;
+    top: 82vh;
+    
+}
