--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -40,10 +40,10 @@
                     </div>
                 </div>
                 <div class="col-xs-4"></div>
-                <div class="col-xs-2" style="text-align: bottom;">
+                <div class="col-xs-2" style="text-align: right;">
                     <button id="editbutton"></button>
                 </div>
-                <div class="col-xs-2" style="text-align: bottom;">
+                <div class="col-xs-2" style="text-align: left;">
                     <button id="switchbutton" onclick="window.location = '#popup1'"></button>
                 </div>
                 <div id="popup1" class="overlay">
@@ -128,8 +128,14 @@
                 </div>
 
             </div>
-
-
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                
+                <img id="worddiv" src="/src/Playlist_word.png" />
+                
+                
+            </div>
         </div>
 
 
