change menu background

--- a/style/menu.css
+++ b/style/menu.css
@@ -53,6 +53,7 @@ body {
 
 #menuNav {
     background-color: rgba(0, 0, 0, 0.7);
+    background-image: url('/src/Home_background_landing_page_gradient.png');
     border-style: none;
     float: left;
     width: 100vw;
