--- a/style/login.css
+++ b/style/login.css
@@ -202,6 +202,7 @@ form.form1 {
 .multiple_select_active
 {
   overflow: visible !important;
+  z-index: 1;
 }
 .multiple_select option
 {
@@ -220,3 +221,7 @@ form.form1 {
 .multiple_select option:checked::before {
   content: "\2611";
 }  
+
+.show{
+  display:inline;
+}
