--- a/views/login.hbs
+++ b/views/login.hbs
@@ -134,9 +134,9 @@
                         <div class="modal-body container" style="max-height: calc(100vh - 200px); overflow-y: auto;">
                             <div class="tab" id="morekids">
                                 {{!-- {{>KidRegister}} --}}
-                                <p>click the "Create Kid profile" button to create a profile for your child.</p>
+<!--                                <p>click the "Create Kid profile" button to create a profile for your child.</p>
                                         <p>you can create a maximum of 5 profiles during registration.</p>
-                                <div class="allInputs1">
+-->                                <div class="allInputs1">
 
                                     <div class="Add_Kids1">
                                         <button id="S_kid1" class="add_profile submit1" onclick="show_kid1()" style="display:block;">Add kid profile</button>
