--- a/views/login.hbs
+++ b/views/login.hbs
@@ -154,7 +154,7 @@
                                             <span>
                                                 <select id="Kid-Interests" class="multiple_select" multiple="multiple">
                                                 {{#each data}}
-                                                    <option>{{name}}</option>
+                                                    <option class="kidtag">{{name}}</option>
                                                 {{/each}}
                                                 </select>
                                             </span>
