--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -66,7 +66,7 @@
 
         <div class="row">
             <div class="tableholder">
-                <div class="col-xl-12">
+                <div class="col-xs-12">
                     <div class="table-events">
                         <table cellspacing="0" rules=rows>
                             <tr>
