--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -103,7 +103,7 @@
 
       <div class="w3-third w3-center">
         <div style="width: 80vw;">
-          <img src="css/src/soccerEvent.jpg" style="height:250px; width=250px; position:relative;" />
+          <img src="css/src/soccerEvent.jpg" style="height:250px; width=250px; position:relative; float:left" />
         </div>
 
       </div>
