--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -6,7 +6,7 @@
     {{> bootstrap}}
 
     <link href="/css/menu.css" type="text/css" rel="stylesheet" />
-    <link href="/css/Profile.css" type="text/css" rel="stylesheet" />
+    <link href="/css/profile.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
