Updated register.js + login.hbs

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -154,7 +154,7 @@
                                             <span>
                                                 <select id="Kid-Interests" class="multiple_select" multiple="multiple">
                                                 {{#each data}}
-                                                    <option class="kidtag">{{name}}</option>
+                                                    <option id="I_Tags1" class="kidtag1" value={{name}}>{{name}}</option>
                                                 {{/each}}
                                                 </select>
                                             </span>
@@ -176,7 +176,7 @@
                                             <span>
                                                 <select id="Kid-Interests" class="multiple_select" multiple="multiple">
                                                 {{#each data}}
-                                                    <option>{{name}}</option>
+                                                    <option class="kidtag2" value={{name}}>{{name}}</option>
                                                 {{/each}}
                                                 </select>
                                             </span>
@@ -198,7 +198,7 @@
                                             <span>
                                                 <select id="Kid-Interests" class="multiple_select" multiple="multiple">
                                                 {{#each data}}
-                                                    <option>{{name}}</option>
+                                                    <option class="kidtag3" value={{name}}>{{name}}</option>
                                                 {{/each}}
                                                 </select>
                                             </span>
