--- a/views/login.hbs
+++ b/views/login.hbs
@@ -151,10 +151,10 @@
                                                 </select>
                                             </span>
                                             who is interested in
-                                            <span>
-                                                <select id="Kid-Interests" class="multiple_select" multiple="multiple">
+                                            <span id="Kid-Interests1">
+                                                <select  class="multiple_select" multiple="multiple">
                                                 {{#each data}}
-                                                    <option id="I_Tags1" class="kidtag1" value={{name}}>{{name}}</option>
+                                                    <option id="I_Tags1" class="kidtag" value={{name}}>{{name}}</option>
                                                 {{/each}}
                                                 </select>
                                             </span>
@@ -174,9 +174,9 @@
                                             </span>
                                             who is interested in
                                             <span>
-                                                <select id="Kid-Interests" class="multiple_select" multiple="multiple">
+                                                <select id="Kid-Interests2" class="multiple_select" multiple="multiple">
                                                 {{#each data}}
-                                                    <option class="kidtag2" value={{name}}>{{name}}</option>
+                                                    <option class="kidtag" value={{name}}>{{name}}</option>
                                                 {{/each}}
                                                 </select>
                                             </span>
@@ -195,10 +195,10 @@
                                                 </select>
                                             </span>
                                             who is interested in
-                                            <span>
-                                                <select id="Kid-Interests" class="multiple_select" multiple="multiple">
+                                            <span id="Kid-Interests3">
+                                                <select  class="multiple_select" multiple="multiple">
                                                 {{#each data}}
-                                                    <option class="kidtag3" value={{name}}>{{name}}</option>
+                                                    <option class="kidtag" value={{name}}>{{name}}</option>
                                                 {{/each}}
                                                 </select>
                                             </span>
