Changed notification slider text

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -26,7 +26,7 @@
         <div class="homeContainer">
             <div class="playText"> <b>Let's Play! </div>
             <div class="notification-container">
-                <span class="notification-text">Notifications</span>
+                <span class="notification-text">Notify Me</span>
                 <label class="switch">
                 <input type="checkbox" id="notif-check">
                 <span class="slider round"></span>
