Removed unused vendor notification

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -417,13 +417,10 @@
                             <h1>All done!</h1>
                             <p></p>
                             <p>An admin will now review your account for approval.</p>
-                            <p>Would you like to receive a notification when your account is approved?</p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="submit1" id="B-Register-complete-no"
-                                data-dismiss="modal">No</button>
-                            <button type="button" class="submit1" id="B-Register-complete-yes" data-dismiss="modal"
-                                onclick="openPushSubscription()">Yes</button>
+                            <button type="button" class="submit1" id="B-Register-complete" data-dismiss="modal"
+                                >Done</button>
                         </div>
                     </div>
                 </div>
